crates/kernel/tests/table/snapshots/main__table__router__saving_a_playlist_under_a_rejected_name_stays_open_with_the_error.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                SavePlaylist,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            SavePlaylist {
                typed: TextEntry {
                    input: "",
                },
                error: None,
            },
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Text(
                Char(
                    '.',
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            SavePlaylist {
                typed: TextEntry {
                    input: ".",
                },
                error: None,
            },
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Text(
                Char(
                    '.',
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            SavePlaylist {
                typed: TextEntry {
                    input: "..",
                },
                error: None,
            },
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Text(
                Char(
                    '.',
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            SavePlaylist {
                typed: TextEntry {
                    input: "...",
                },
                error: None,
            },
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Confirm,
        ),
        [],
        Stopped,
        Some(
            SavePlaylist {
                typed: TextEntry {
                    input: "...",
                },
                error: Some(
                    AllDots,
                ),
            },
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
