crates/kernel/tests/table/snapshots/main__table__router__search_enqueue_queues_the_resolved_track_and_stays_open.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                Search,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "",
                        matches: [
                            Index(0),
                            Index(1),
                            Index(2),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'm',
                    ),
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "m",
                        matches: [
                            Index(0),
                            Index(2),
                            Index(1),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'o',
                    ),
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "mo",
                        matches: [
                            Index(0),
                            Index(2),
                            Index(1),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'o',
                    ),
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moo",
                        matches: [
                            Index(0),
                            Index(2),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'n',
                    ),
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moon",
                        matches: [
                            Index(0),
                            Index(2),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Overlay(
            Search(
                Navigate(
                    Next,
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 1,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moon",
                        matches: [
                            Index(0),
                            Index(2),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Overlay(
            Search(
                Enqueue,
            ),
        ),
        [
            Animate(
                QueueChanged,
            ),
        ],
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 1,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moon",
                        matches: [
                            Index(0),
                            Index(2),
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [
            Local(
                "/m/2.flac",
            ),
        ],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
]
